fix: bug with top of page hidden by header

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -9,7 +9,6 @@
     flex-direction: column;
     position: sticky;
     top: 0px;
-    height: 90px;
     z-index: 1;
     justify-content: space-between;
     background-color: var(--secondary_dark);
