--- a/src/pages/ContactPage.css
+++ b/src/pages/ContactPage.css
@@ -1,5 +1,5 @@
 .contact-page {
-    padding: 40px 0;
+    padding: 20px 0 40px;
     min-height: 100%;
     display: flex;
     flex-direction: column;
